Bug 1505363 - Call DiscardCompositorAnimations() after calling WrBridge()->EndTransaction() r=kats

Discard animations after calling WrBridge()->EndTransaction(). It updates mWrEpoch in WebRenderBridgeParent. The updated mWrEpoch is necessary for deleting animations at the correct time.

Differential Revision: https://phabricator.services.mozilla.com/D15799