gfx/layers/wr/WebRenderLayerManager.cpp
@@ -298,8 +298,6 @@ void WebRenderLayerManager::EndTransactionWithoutLayer(
     }
   }
 
-  DiscardCompositorAnimations();
-
   mWidget->AddWindowOverlayWebRenderCommands(WrBridge(), builder,
                                              resourceUpdates);
   mWindowOverlayChanged = false;
@@ -370,6 +368,11 @@ void WebRenderLayerManager::EndTransactionWithoutLayer(
                                mTransactionIdAllocator->GetVsyncStart(),
                                refreshStart, mTransactionStart, mURL);
   }
+
+  // Discard animations after calling WrBridge()->EndTransaction().
+  // It updates mWrEpoch in WebRenderBridgeParent. The updated mWrEpoch is
+  // necessary for deleting animations at the correct time.
+  DiscardCompositorAnimations();
 
   mTransactionStart = TimeStamp();
 
